--- a/sass/components/_advantages-section.scss
+++ b/sass/components/_advantages-section.scss
@@ -8,10 +8,16 @@
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 30px 30px;
+
+   
 }
 
 .advantages__item {
     width: 30%;
+
+    @media screen and (max-width: 767px) {
+         width: 100%;
+        }
 }
 
 .advantages__name {
