--- a/sass/components/_offer-section.scss
+++ b/sass/components/_offer-section.scss
@@ -10,6 +10,11 @@
   font-size: 50px;
   color: var(--white-text-color);
   margin-bottom: 15px;
+
+@media screen and (max-width: 767px) {
+font-size: 40px;
+  }
+
 }
 
 .offer__text {
@@ -24,6 +29,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  @media screen and (max-width: 767px) {
+      flex-flow: column;
+      gap: 30px;
+    }
 }
 
 .offer__button {
