--- a/sass/components/_prices-section.scss
+++ b/sass/components/_prices-section.scss
@@ -6,6 +6,11 @@
 .prices__cards {
   display: flex;
   gap: 60px;
+
+  @media screen and (max-width: 767px) {
+      flex-flow: column;
+    }
+
 }
 
 .prices__card {
@@ -15,10 +20,22 @@
   display: flex;
   flex-flow: column;
   justify-content: space-between;
+
+ 
+}
+
+.prices__box {
+    margin-bottom: 17px;
+ 
 }
 
 .prices__image {
-  margin-bottom: 17px;
+
+
+  @media screen and (max-width: 767px) {
+   width: 100%;
+    }
+
 }
 
 .prices__option {
@@ -62,4 +79,12 @@
   text-align: center;
 
   border: 1px solid var(--accent-color);
+  transition: var(--button-animation);
+
+  &:hover {
+    background-color: var(--accent-color);
+    color: var(--primary-background-color);
+  }
+
+  
 }
