--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,4 +5,7 @@
 @import "./components/info-section";
 @import "./components/offer-section";
 @import "./components/advantages-section";
-@import "./components/faq";
+@import "./components/faq-section";
+@import "./components/bonuses-section";
+@import "./components/reviews-section";
+@import "./components/contact-section";
